fix column gap

--- a/app/scss/new-list-lawyers.scss
+++ b/app/scss/new-list-lawyers.scss
@@ -12,7 +12,7 @@ $mobileSmall: 479.98px;
    .active-quest {
       .lawyers-found__request {
          background: #efefef !important;
-         border-color: #EFEFEF !important;
+         border-color: #efefef !important;
          color: #000 !important;
       }
       .lawyers-found__cancel {
@@ -119,12 +119,11 @@ $mobileSmall: 479.98px;
       &__advice {
          min-width: 1300px;
          display: flex;
-         column-gap: 25px;
-         // max-height: 105px;
+         column-gap: 55px;
+         max-height: 105px;
          @media (max-width: $tablet) {
             flex-direction: column;
             max-height: none;
-            min-width: none;
             align-items: flex-start;
             row-gap: 32px;
             background-color: #fff;
@@ -220,7 +219,7 @@ $mobileSmall: 479.98px;
 
       &__temp-name {
          margin: 30px 0px 0px 12px;
-         min-width: 345px;
+         min-width: 280px;
          @media (max-width: $mobile) {
             min-width: auto;
          }
